--- a/frontend/templates/login.html
+++ b/frontend/templates/login.html
@@ -41,6 +41,7 @@
         </div>
     </div>
 
+    <script src="/static/js/common.js"></script>
     <script src="/static/js/auth.js"></script>
 </body>
 </html>
